syntax = "proto3";
package api;

option go_package = "github.com/sivchari/chat-answer/proto";

service MessageService {
  rpc SendMessage(SendMessageRequest) returns (SendMessageResponse) {}
}

message SendMessageRequest {
  Message message = 1;
}

message SendMessageResponse {
  Message message = 1;
}

message Message {
  string message = 1;
  string roomId = 2;
}
